Project screen: back arrow, contrast corrections.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10943,6 +10943,7 @@ video {
 .dark-container .BrainhubCarousel__dots .BrainhubCarousel__dot:before {
   background-color: #fff;
   transition: all 0.25s linear;
+  margin-top: 1rem;
 }
 
 .light-container .social-icon g {
