--- a/src/screens/Projects/styles.css
+++ b/src/screens/Projects/styles.css
@@ -68,7 +68,45 @@
   object-fit: contain;
 }
 
-.app-container {
+.action-bar {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 4%;
+  padding-left: 4%;
+  z-index: 3;
+}
+
+.back-arrow-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  margin-top: 2%;
+}
+
+.back-arrow-container span {
+  font-size: 0.85rem;
+  opacity: 0;
+  transform: translateX(-2rem);
+  transition: all 0.25s linear;
+  z-index: 1;
+}
+
+.back-arrow-container:hover span {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 0.15s linear;
+  margin-left: 0.3rem;
+}
+
+.back-arrow {
+  font-size: 2rem;
+  cursor: pointer;
+  z-index: 3;
 }
 
 @media (max-width: 960px) {
@@ -106,5 +144,36 @@
 
   .carousel-arrow {
     display: none;
+  }
+}
+
+@media (max-width: 1024px) {
+  .action-bar {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+}
+
+@media (max-width: 720px) {
+  .action-bar {
+    padding-left: 4%;
+    padding-right: 0%;
+  }
+
+  .light-container .back-arrow {
+    filter: drop-shadow(3px 3px 2px rgba(255, 255, 255, 0.5));
+  }
+
+  .dark-container .back-arrow {
+    filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.8));
+  }
+
+  .back-arrow {
+    margin-top: 1rem;
+  }
+
+  .back-arrow-container span {
+    margin-top: 0.9rem;
+    filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.8));
   }
 }
